Remove DeviceDefinition from the list of incompatible resource types
Signed-off-by: Lee Surprenant <lmsurpre@us.ibm.com>